Added CORS configuration for frontend

--- a/admin-panel/.env
+++ b/admin-panel/.env
@@ -1,2 +1,2 @@
 ## backend_url
-VITE_BACKEND_URL='https://doc-tracker-backen.onrender.com/'
+VITE_BACKEND_URL='https://doc-tracker-backen.onrender.com'
