--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "multer": "^2.0.2",
     "nodemon": "^3.1.10",
     "razorpay": "^2.9.6",
+    "react-router-dom": "^7.9.4",
     "validator": "^13.15.15"
   }
 }
