--- a/admin-panel/.env
+++ b/admin-panel/.env
@@ -1,5 +1,5 @@
 ## backend_url
-VITE_BACKEND_URL='http://localhost:5001'
+VITE_BACKEND_URL='https://doc-tracker-backen.onrender.com'
 
 
 ## TOKEN='eyJhbGciOiJIUzI1NiJ9.YWRtaW5AZG9jdHJhY2tlci5jb21xd2VydHkxMjM.n_BcpAR4UjK7hcMSWULFBG8PVf47HQ1hnal4Iz_mBT0'
