--- a/admin-panel/.env
+++ b/admin-panel/.env
@@ -3,4 +3,4 @@ VITE_BACKEND_URL='http://localhost:5001'
 
 
 ## TOKEN='eyJhbGciOiJIUzI1NiJ9.YWRtaW5AZG9jdHJhY2tlci5jb21xd2VydHkxMjM.n_BcpAR4UjK7hcMSWULFBG8PVf47HQ1hnal4Iz_mBT0'
-VITE_API_URL='https://doc-tracker-backen.onrender.com'
+# VITE_API_URL='https://doc-tracker-backen.onrender.com'
