--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "backend",
+  "name": "doctor-appointment-backend",
   "version": "1.0.0",
   "main": "server.js",
   "type": "module",
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "server": "nodemon server.js",
-    "build": "echo 'No build step"
+    "build": "echo 'No build step for Node.js backend'",
+    "dev":"nodemon server.js"
   },
   "author": "",
   "license": "ISC",
@@ -27,5 +28,8 @@
     "razorpay": "^2.9.6",
     "react-router-dom": "^7.9.4",
     "validator": "^13.15.15"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
