fix: update vercel build and start script

--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -8,13 +8,9 @@
     }
   ],
   "routes": [
-    {
-      "handle": "filesystem"
-    },
-    {
-      "src": "/.*",
-      "dest": "/index.html"
-    }
+    { "handle": "filesystem" },
+    { "src": "/.*", "dest": "/index.html" }
   ]
 }
+
 
